--- a/4 курс/Pr2/Завдання 1/index.html
+++ b/4 курс/Pr2/Завдання 1/index.html
@@ -1,1 +1,12 @@
-
+<!DOCTYPE html>
+<html lang="uk">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Тест JavaScript</title>
+</head>
+<body>
+    <h1>Завдання 1</h1>
+    <script src="products.js"></script> <!-- Підключення JavaScript-файлу -->
+</body>
+</html>
