--- a/4 курс/Pr2/Завдання 2/index.html
+++ b/4 курс/Pr2/Завдання 2/index.html
@@ -1,1 +1,12 @@
-
+<!DOCTYPE html>
+<html lang="uk">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Групування та Сортування Студентів</title>
+</head>
+<body>
+    <h1>Інформація про студентів</h1>
+    <script src="students.js"></script> <!-- Підключення JavaScript-файлу -->
+</body>
+</html>
