--- a/4 курс/Pr4/Завдання 1/index.html
+++ b/4 курс/Pr4/Завдання 1/index.html
@@ -1,1 +1,21 @@
-
+<!DOCTYPE html>
+<html lang="uk">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Годинник</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            margin-top: 50px;
+            font-size: 2em;
+        }
+    </style>
+</head>
+<body>
+    <h1>Поточний час</h1>
+    <div id="clock">00:00:00</div> 
+    <script src="clock.js"></script> 
+</body>
+</html>
