--- a/4 курс/Pr4/Завдання 2.5/index.html
+++ b/4 курс/Pr4/Завдання 2.5/index.html
@@ -1,1 +1,27 @@
-
+<!DOCTYPE html>
+<html lang="uk">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Оновлення Часу</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            margin-top: 50px;
+            font-size: 2em;
+        }
+        button {
+            padding: 10px 20px;
+            font-size: 1em;
+            cursor: pointer;
+        }
+    </style>
+</head>
+<body>
+    <h1>Поточний час</h1>
+    <div id="clock">00:00:00</div> <!-- Місце для відображення часу -->
+    <button id="updateButton">Оновити час</button> <!-- Кнопка для оновлення часу -->
+    <script src="clock.js"></script> <!-- Підключення JavaScript-файлу -->
+</body>
+</html>
