--- a/4 курс/Pr4/Завдання 3/index.html
+++ b/4 курс/Pr4/Завдання 3/index.html
@@ -1,1 +1,22 @@
-
+<!DOCTYPE html>
+<html lang="uk">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Ефект друкарської машинки</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            margin-top: 50px;
+            font-size: 2em;
+        }
+    </style>
+</head>
+<body>
+    <h1>Ефект друкарської машинки</h1>
+    <div id="output"></div> <!-- Місце для виведення тексту -->
+    <button id="startButton">Розпочати друку</button> <!-- Кнопка для запуску друку -->
+    <script src="typewriter.js"></script> <!-- Підключення JavaScript-файлу -->
+</body>
+</html>
