--- a/index.html
+++ b/index.html
@@ -82,11 +82,11 @@
                 <h2>Навички</h2>
                 <p>MySQL,Microsoft Office (Word, Excel, Access)</p>
             </section>
-            <!-- Розділ "Мої роботи" з кнопкою "4 курс" -->
+            <!-- Розділ "Мої роботи" -->
         <div class="my-work">
             <h2>Мої роботи</h2>
             <hr>
-            <a href="https://github.com/Svyat04/Svyat04.github.io/tree/main/4%20%D0%BA%D1%83%D1%80%D1%81" class="course-btn">4 курс</a>
+            <a href="Lr1/Приклад 1/index.html" class="btn">Лабораторна робота №1</a>
         </div>
     </div>
 </div>
