--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <div class="my-work">
             <h2>Мої роботи</h2>
             <hr>
-            <a href="Lr1/Приклад 1/index.html" class="btn">Лабораторна робота №1</a>
+            <a href="4%20курс/Lr1/index.html" class="btn">Лабораторна робота №1</a>
         </div>
     </div>
 </div>
