--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
             <h2>Мої роботи</h2>
             <hr>
             <a href="4%20курс/Lr1/index.html" class="btn">Лабораторна робота №1</a>
+            <a href="4%20курс/Lr2/index.html" class="btn">Лабораторна робота №2</a>
         </div>
     </div>
 </div>
