--- a/4 курс/Lr2/index.html
+++ b/4 курс/Lr2/index.html
@@ -11,7 +11,7 @@
             <td>
                 <ul>
                     <li><a href="Приклад 1/index.html">Приклад 1</a></li>
-                    <li><a href="Приклад 2/index.html">Приклад 2-3</a></li>
+                    <li><a href="Приклад 2/index.html">Приклад 2</a></li>
                     <li><a href="Приклад 4/index.html">Приклад 4</a></li>
                     <li><a href="Приклад 5/index.html">Приклад 5</a></li>
                     <li><a href="Приклад 6/index.html">Приклад 6</a></li>
