--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
             <hr>
             <a href="4%20курс/Lr1/index.html" class="btn">Лабораторна робота №1</a>
             <a href="4%20курс/Lr2/index.html" class="btn">Лабораторна робота №2</a>
+            <a href="4%20курс/Pr2/index.html" class="btn">Практична робота №2</a>
         </div>
     </div>
 </div>
