--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
             <a href="4%20курс/Lr1/index.html" class="btn">Лабораторна робота №1</a>
             <a href="4%20курс/Lr2/index.html" class="btn">Лабораторна робота №2</a>
             <a href="4%20курс/Pr2/index.html" class="btn">Практична робота №2</a>
+            <a href="4%20курс/Pr4/index.html" class="btn">Практична робота №4</a>
         </div>
     </div>
 </div>
