--- a/4 курс/Pr1/index.html
+++ b/4 курс/Pr1/index.html
@@ -1,1 +1,66 @@
+<!DOCTYPE html>
+<html lang="uk">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Зв'яжіться з нами</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
 
+<!-- Навигационное меню -->
+<header class="navbar">
+    <div class="logo">ЛОГОТИП</div>
+    <nav>
+        <ul class="menu">
+            <li><a href="#">Компанія</a></li>
+            <li><a href="#">Послуги</a></li>
+            <li><a href="#">FinTech Рішення</a></li>
+            <li><a href="#">Продукти</a></li>
+            <li><a href="#">Портфоліо</a></li>
+            <li><a href="#">Зв'яжіться з нами</a></li>
+        </ul>
+    </nav>
+</header>
+
+<div class="container">
+    <!-- Форма -->
+    <div class="form-section">
+        <h2>Зв'яжіться з нами</h2>
+        <p>Потрібна досвідчена та вміла рука з IT-проектами на замовлення? Заповніть форму, щоб отримати безкоштовну консультацію.</p>
+        <form>
+            <input type="text" placeholder="Назва вашої компанії">
+            <input type="text" placeholder="Природа бізнесу">
+            <input type="text" placeholder="Адреса">
+            <input type="text" placeholder="Поштовий індекс">
+            <input type="text" placeholder="Контактне ім'я">
+            <input type="text" placeholder="Контактний телефон">
+            <input type="email" placeholder="email@gmail.com" required>
+            <span class="error-message">Будь ласка, введіть дійсну адресу електронної пошти</span>
+            <input type="text" placeholder="LinkedIn">
+            <textarea placeholder="Давайте поговоримо про вашу ідею"></textarea>
+            <input type="file">
+            <label><input type="checkbox"> Я хочу захистити свої дані, підписавши NDA</label>
+            <button type="submit">SUBMIT</button>
+        </form>
+    </div>
+
+    <!-- Блок с офисами -->
+    <div class="offices-section">
+        <h3>Офіси</h3>
+        <p>США<br>500 5th Avenue Suite 400, NY 10110</p>
+        <p>Велика Британія<br>High St, Bromley BR1 1DN</p>
+        <p>Франція<br>Париж, авеню Терьюр де Франс, 80</p>
+
+        <h3>Для швидких запитів</h3>
+        <p><img src="flags/uk.png" alt="UK Flag" class="flag-icon"> +44 7777777777</p>
+        <p><img src="flags/us.png" alt="US Flag" class="flag-icon"> +1 3333333330</p>
+
+        <h3>Хочете приєднатися до нашої розсилки?</h3>
+        <input type="text" placeholder="Електронна пошта">
+        <span class="checkmark">✔</span>
+    </div>
+</div>
+
+</body>
+</html>
