--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <a href="#portfolio">Портфоліо</a>
                     <a href="#contacts">Контакти</a>
                 </nav>
-                <h1>Святослав Магун</h1>
+                <h1>Магун Святослав</h1>
                 <!-- Соцмережі -->
                 <div class="social-icons">
                     <!-- Посилання на GitHub -->
