--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             <a href="4%20курс/Pr1/index.html" class="btn">Практична робота №1</a>
             <a href="4%20курс/Pr2/index.html" class="btn">Практична робота №2</a>
             <a href="4%20курс/Pr4/index.html" class="btn">Практична робота №4</a>
-            <a href="4%20курс/Курсова/index.html" class="btn">Курсова</a>
+            <a href="4%20курс/Курсова/index.html" class="btn">Курсова робота</a>
         </div>
         </div>
     </div>
