--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
             <a href="4%20курс/Pr2/index.html" class="btn">Практична робота №2</a>
             <a href="4%20курс/Pr4/index.html" class="btn">Практична робота №4</a>
             <a href="4%20курс/Курсова/index.html" class="btn">Курсовий проєкт</a>
+             <a href="4%20курс/Екзамен/index.html" class="btn">Екзамен</a>
         </div>
     </div>
 </div>
